[gd_scene load_steps=21 format=1]

[ext_resource path="res://scripts/game.gd" type="Script" id=1]
[ext_resource path="res://assets/fundo.png" type="Texture" id=2]
[ext_resource path="res://scripts/bird.gd" type="Script" id=3]
[ext_resource path="res://assets/birdSprites/felpudoVoa1.png" type="Texture" id=4]
[ext_resource path="res://assets/birdSprites/felpudoVoa2.png" type="Texture" id=5]
[ext_resource path="res://assets/birdSprites/felpudoVoa3.png" type="Texture" id=6]
[ext_resource path="res://assets/birdSprites/felpudoVoa4.png" type="Texture" id=7]
[ext_resource path="res://assets/birdSprites/felpudoVoa5.png" type="Texture" id=8]
[ext_resource path="res://assets/birdSprites/felpudoVoa6.png" type="Texture" id=9]
[ext_resource path="res://sounds/somVoa.ogg" type="AudioStream" id=10]
[ext_resource path="res://scenes/pipe.tscn" type="PackedScene" id=11]
[ext_resource path="res://scripts/pipeGenerator.gd" type="Script" id=12]
[ext_resource path="res://fonts/font_size160.fnt" type="BitmapFont" id=13]
[ext_resource path="res://sounds/somScore.ogg" type="AudioStream" id=14]
[ext_resource path="res://sounds/somHit.ogg" type="AudioStream" id=15]

[sub_resource type="Animation" id=1]

resource/name = "backAnim"
length = 3.0
loop = true
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("backGroundAnimation/background1:transform/pos")
tracks/0/interp = 1
tracks/0/imported = false
tracks/0/keys = {
"times": FloatArray( 0, 3 ),
"transitions": FloatArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( -1026, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("backGroundAnimation/background2:transform/pos")
tracks/1/interp = 1
tracks/1/imported = false
tracks/1/keys = {
"times": FloatArray( 0, 3 ),
"transitions": FloatArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 1026, 0 ), Vector2( 0, 0 ) ]
}

[sub_resource type="CircleShape2D" id=2]

custom_solver_bias = 0.0
radius = 63.7489

[sub_resource type="SpriteFrames" id=3]

animations = [ {
"frames": [ ExtResource( 4 ), ExtResource( 5 ), ExtResource( 6 ), ExtResource( 7 ), ExtResource( 8 ), ExtResource( 9 ) ],
"loop": true,
"name": "fly",
"speed": 7.0
} ]

[sub_resource type="SegmentShape2D" id=4]

custom_solver_bias = 0.0
a = Vector2( 1025.95, 1.41242 )
b = Vector2( 0.194107, 1.36474 )

[sub_resource type="SegmentShape2D" id=5]

custom_solver_bias = 0.0
a = Vector2( 6.5376, 1706.15 )
b = Vector2( 1031.13, 1711.21 )

[node name="gameNode" type="Node2D"]

z/z = 2
script/script = ExtResource( 1 )

[node name="backGroundAnimation" type="AnimationPlayer" parent="."]

editor/display_folded = true
playback/process_mode = 1
playback/default_blend_time = 0.0
root/root = NodePath("..")
anims/backAnim = SubResource( 1 )
playback/active = true
playback/speed = 1.0
blend_times = [  ]
autoplay = "backAnim"

[node name="background1" type="Sprite" parent="backGroundAnimation"]

transform/scale = Vector2( 3.8, 3.6 )
texture = ExtResource( 2 )
centered = false

[node name="background2" type="Sprite" parent="backGroundAnimation"]

transform/pos = Vector2( 1026, 0 )
transform/scale = Vector2( 3.8, 3.6 )
texture = ExtResource( 2 )
centered = false

[node name="bird" type="RigidBody2D" parent="."]

transform/pos = Vector2( 548.822, 618.664 )
z/z = 1
input/pickable = false
shapes/0/shape = SubResource( 2 )
shapes/0/transform = Matrix32( 1, 0, 0, 1, 30.6851, 6.10352e-05 )
shapes/0/trigger = false
collision/layers = 1
collision/mask = 1
mode = 2
mass = 1.0
friction = 1.0
bounce = 0.0
gravity_scale = 18.0
custom_integrator = false
continuous_cd = 0
contacts_reported = 0
contact_monitor = false
sleeping = false
can_sleep = true
velocity/linear = Vector2( 0, 0 )
velocity/angular = 0.0
damp_override/linear = -1.0
damp_override/angular = -1.0
script/script = ExtResource( 3 )

[node name="birdAnimation" type="AnimatedSprite" parent="bird"]

frames = SubResource( 3 )
animation = "fly"
playing = true

[node name="birdCollision" type="CollisionShape2D" parent="bird"]

transform/pos = Vector2( 30.6851, 6.10352e-05 )
shape = SubResource( 2 )
trigger = false
_update_shape_index = 0

[node name="soundFly" type="StreamPlayer" parent="bird"]

stream/stream = ExtResource( 10 )
stream/play = false
stream/loop = false
stream/volume_db = 0.0
stream/autoplay = false
stream/paused = false
stream/loop_restart_time = 0.0
stream/buffering_ms = 500

[node name="limitCollision" type="StaticBody2D" parent="."]

editor/display_folded = true
input/pickable = false
shapes/0/shape = SubResource( 4 )
shapes/0/transform = Matrix32( 1, 0, 0, 1, 0, 0 )
shapes/0/trigger = false
shapes/1/shape = SubResource( 5 )
shapes/1/transform = Matrix32( 1, 0, 0, 1, 0, 0 )
shapes/1/trigger = false
collision/layers = 1
collision/mask = 1
constant_linear_velocity = Vector2( 0, 0 )
constant_angular_velocity = 0.0
friction = 1.0
bounce = 0.0

[node name="collisionLineUP" type="CollisionShape2D" parent="limitCollision"]

shape = SubResource( 4 )
trigger = false
_update_shape_index = 0

[node name="collisionLineDown" type="CollisionShape2D" parent="limitCollision"]

shape = SubResource( 5 )
trigger = false
_update_shape_index = 1

[node name="pipes" type="Node2D" parent="."]

editor/display_folded = true
transform/scale = Vector2( 1, 0.741731 )
z/z = 2

[node name="pipe" parent="pipes" instance=ExtResource( 11 )]

transform/pos = Vector2( 957.794, 863.662 )
z/relative = false

[node name="generatorPipes" type="Position2D" parent="pipes"]

transform/pos = Vector2( 1206.23, 773.758 )
script/script = ExtResource( 12 )

[node name="Timer" type="Timer" parent="pipes/generatorPipes"]

process_mode = 1
wait_time = 3.0
one_shot = false
autostart = true

[node name="timerReplay" type="Timer" parent="."]

process_mode = 1
wait_time = 2.0
one_shot = false
autostart = false

[node name="score" type="Node2D" parent="."]

editor/display_folded = true
z/z = 3

[node name="Control" type="Control" parent="score"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 40.0
margin/bottom = 40.0

[node name="scoreLabel" type="Label" parent="score/Control"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 2.0
margin/top = 0.0
margin/right = 1034.0
margin/bottom = 173.0
custom_fonts/font = ExtResource( 13 )
text = "0"
align = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="soundScore" type="StreamPlayer" parent="."]

stream/stream = ExtResource( 14 )
stream/play = false
stream/loop = false
stream/volume_db = 0.0
stream/autoplay = false
stream/paused = false
stream/loop_restart_time = 0.0
stream/buffering_ms = 500

[node name="soundHit" type="StreamPlayer" parent="."]

stream/stream = ExtResource( 15 )
stream/play = false
stream/loop = false
stream/volume_db = 0.0
stream/autoplay = false
stream/paused = false
stream/loop_restart_time = 0.0
stream/buffering_ms = 500

[connection signal="timeout" from="pipes/generatorPipes/Timer" to="pipes/generatorPipes" method="_on_Timer_timeout"]

[connection signal="timeout" from="timerReplay" to="." method="_on_timerReplay_timeout"]


